# practico-1-parte-2-matiasmolinolo

./: Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scrapers/: items.py  middlewares.py  pipelines.py  settings.py
scrapers/spiders/: gallito.py  quotes_spider.py
